--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Docker Image
+name: Build, Publish, and Deploy
 
 on:
   push:
@@ -10,24 +10,52 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Vérifie le dépôt
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # 1. Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    # 2. Connexion au registre Docker (GitHub Container Registry)
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      # 2. Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    # 3. Construire l'image Docker
-    - name: Build Docker image
-      run: |
-        docker build -t ghcr.io/${{ github.repository }}/app:latest .
+      # 3. Build the Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}/app:latest .
 
-    # 4. Pousser l'image Docker sur GitHub Packages
-    - name: Push Docker image
-      run: |
-        docker push ghcr.io/${{ github.repository }}/app:latest
+      # 4. Push the Docker image
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/${{ github.repository }}/app:latest
+
+  # TEST ONCE THE TERRFAORM WORKS
+  
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-publish  # Run only after the build-and-publish job
+
+  #   steps:
+  #     # 1. Checkout repository
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
+
+  #     # 2. Install Terraform CLI
+  #     - name: Set up Terraform
+  #       uses: hashicorp/setup-terraform@v2
+  #       with:
+  #         terraform_wrapper: false  # Use native Terraform binary
+
+  #     # 3. Initialize Terraform
+  #     - name: Terraform Init
+  #       run: terraform init
+
+  #     # 4. Apply Terraform with the updated Docker image tag
+  #     - name: Terraform Apply
+  #       env:
+  #         TF_VAR_docker_image: "ghcr.io/${{ github.repository }}/app:latest"
+  #       run: |
+  #         terraform apply -auto-approve
