--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,76 @@
-name: Build, Publish, and Deploy
+###############     THIS CODE IS PROVIDED BY THE GROUP OF LOUIS Skrzypczak      ############### 
+
+name: Cloud_Computing_Project
 
 on:
+  pull_request:
+    branches: [ "main", "dev" ]
+    types: [opened, synchronize]
   push:
     branches:
       - main
 
-jobs:
-  build-and-publish:
-    runs-on: ubuntu-latest
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
+permissions:
+  contents: read
+  packages: write
+
+jobs:
+  check_service:
+    ## This job will run on every pull request and push to main branch
+    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main' 
+    runs-on: ubuntu-latest
     steps:
-      # 1. Checkout repository
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      ## I found this on the internet, it is a custom action that installs uv
+      ## Giving u the link if you wanna check it out : 
+      ## https://github.com/yezz123/setup-uv
+      - uses: yezz123/setup-uv@v4
+      - run: uv --version
+      - name: Install dependencies
+        run: uv sync
+      - name: Build Project
+        run: uv build
+      - name: Running unit tests
+        run: uv run pytest tests/
+
+  build_docker_image:
+    ## This job will run only on push to main branch (when merging a PR)
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Log in to GitHub Container Registry
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3. Build the Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t ghcr.io/${{ github.repository }}/app:latest .
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          ## Raw value latest is used to get the latest docker image
+          ## Although we also sha to ensure that the image is unique (and that we don't overwrite the latest image)
+          tags: |
+            type=ref,event=branch
+            type=sha
+            type=raw,value=latest
 
-      # 4. Push the Docker image
-      - name: Push Docker image
-        run: |
-          docker push ghcr.io/${{ github.repository }}/app:latest
-
-  # TEST ONCE THE TERRFAORM WORKS
-  
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-publish  # Run only after the build-and-publish job
-
-  #   steps:
-  #     # 1. Checkout repository
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
-
-  #     # 2. Install Terraform CLI
-  #     - name: Set up Terraform
-  #       uses: hashicorp/setup-terraform@v2
-  #       with:
-  #         terraform_wrapper: false  # Use native Terraform binary
-
-  #     # 3. Initialize Terraform
-  #     - name: Terraform Init
-  #       run: terraform init
-
-  #     # 4. Apply Terraform with the updated Docker image tag
-  #     - name: Terraform Apply
-  #       env:
-  #         TF_VAR_docker_image: "ghcr.io/${{ github.repository }}/app:latest"
-  #       run: |
-  #         terraform apply -auto-approve
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
